--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,15 @@
+# change prefix key
 set -g prefix C-o
 unbind C-b
 
+# use vi-like keybind
 set-window-option -g mode-keys vi
 bind-key -t vi-copy v begin-selection
+
+# status line color
+set -g status-left-style bg=green
+set -g status-style bg=blue
+set -g window-status-current-style bg=white,fg=blue
+
+# bind key to choose session
+bind-key -T prefix C choose-session
