tmux: enable mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,3 +16,6 @@ set-option -g status-right "#[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f
 
 # bind key to choose session
 bind-key -T prefix C choose-session
+
+# use mouse
+set -g mouse on
