--- a/tmux.conf
+++ b/tmux.conf
@@ -7,9 +7,9 @@ set-window-option -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 
 # status line color
+set -g status-style bg=colour234
 set -g status-left-style bg=colour27,fg=black
-set -g status-style bg=black
-set -g window-status-current-style fg=white,underscore,bold,bg=colour243
+set -g window-status-current-style fg=black,underscore,bold,bg=colour252
 
 # status right (load average)
 set-option -g status-right "#[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
